--- a/src/app/pages/safety/safety.component.scss
+++ b/src/app/pages/safety/safety.component.scss
@@ -642,6 +642,13 @@
   text-align: center;
   font-weight: normal;
   font-size: 11px;
+  
+  &.total-cell {
+    font-weight: 600;
+    background-color: #f8f9fa;
+    border-left: 2px solid #d0d0d0;
+    border-right: 2px solid #d0d0d0;
+  }
 }
 
 .date-cell {
